@@ -471,3 +471,4 @@
 /engine/Renderer_d3d9/Debug/link.7512-cvtres.write.1.tlog
 /engine/Renderer_d3d9/Debug/link.7512.read.1.tlog
 /engine/Renderer_d3d9/Debug/link.7512.write.1.tlog
+/docs/html/installdox
