@@ -7,3 +7,4 @@
 *.log
 *.manifest
 *.res
+*.ilk
