@@ -1,21 +1,28 @@
 #ifndef KGE_FILESYSTEM_H
 #define KGE_FILESYSTEM_H
 
+#include "String.h"
+
 namespace kge
 {
 	namespace io
 	{
-		class FileSysem
+		class KGE_API FileSystem
 		{
 		public:
 
 			//! Constructor
-			FileSysem();
+			FileSystem();
 
 			//! Destructor
-			~FileSysem();
+			virtual ~FileSystem();
 
-
+			//! Check if this FileSystem can load this file.
+			/*!
+				\param FileName The name of the file to check.
+				\return Returns true if possible.
+			 */
+			virtual bool CanLoad(core::stringw FileName);
 
 		}; // FileSysem
 
